feat: remove fruit from bucket
