# api/server.go
@@ -24,6 +24,7 @@ type BucketController interface {
 type FruitController interface {
 	Create(ctx *gin.Context)
 	AddOnBucket(ctx *gin.Context)
+	RemoveFromBucket(ctx *gin.Context)
 }
 
 // @title			Where are my fruits API
@@ -49,6 +50,7 @@ func ConfigGin(host, port string, logger *zap.SugaredLogger, health HealthContro
 
 	r.POST("/api/v1/fruits", fruit.Create)
 	r.POST("/api/v1/fruits/:fruitID/buckets/:bucketID", fruit.AddOnBucket)
+	r.DELETE("/api/v1/fruits/:fruitID/buckets/:bucketID", fruit.RemoveFromBucket)
 
 	return r
 }
